<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- タイトルバー -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@drawable/text_month_line" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
        	android:layout_marginStart="10dp"
            android:gravity="fill"
            android:text="@string/record_tab_title"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

    </LinearLayout>


    <!-- ボディー -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="19"
        android:orientation="vertical" >

        <!-- 目標ジャンル -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/stroke_for_top"
            android:orientation="horizontal" >

            <!-- 目標ジャンルラベル -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/goal_genre"
                android:textSize="20sp" />

            <!-- 目標ジャンルテキスト -->
            <TextView
                android:id="@+id/achieve_num_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:textSize="20sp" />

        </LinearLayout>


        <!-- 目標 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/stroke_except_top"
            android:orientation="horizontal" >

            <!-- 目標ラベル -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/goal"
                android:textSize="20sp" />

            <!-- 目標テキスト -->
            <TextView
                android:id="@+id/comment_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="fill"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- 目標進捗率 -->
        <TextView
            android:id="@+id/percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#FF8080" />

        <!-- 目標進捗率バー -->
        <ProgressBar android:id="@+id/progressbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:indeterminate="false"
            style="@android:style/Widget.ProgressBar.Horizontal" />

        <!-- 目標達成のために必要な1日あたりの数 -->
        <TextView
            android:id="@+id/numPerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="fill"
            android:textSize="20sp" />


        </LinearLayout>

</LinearLayout>
